--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            name/app
+            laffin/cloudproxy
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
