--- a/.github/workflows/python-app-testing.yml
+++ b/.github/workflows/python-app-testing.yml
@@ -7,7 +7,9 @@ on:
   push:
     branches: [ develop ]
   pull_request:
-    branches: [ develop ]
+    branches:
+    - develop
+    - main
 
 jobs:
   
