--- a/cloudproxy-ui/package.json
+++ b/cloudproxy-ui/package.json
@@ -30,6 +30,9 @@
     "vue-cli-plugin-bootstrap-vue": "~0.7.0",
     "vue-template-compiler": "^2.6.11"
   },
+   "optionalDependencies": {
+    "fsevents": "*"
+  },
   "eslintConfig": {
     "root": true,
     "env": {
