--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
           # list of Docker images to use as base name for tags
           images: |
             laffin/cloudproxy
+          tag-custom: latest
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
