--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 requests==2.31.0
-apscheduler==3.9.1
-dateparser==1.1.2
-fastapi==0.85.1
-loguru==0.6.0
-python-dotenv==0.21.0
-uvicorn==0.19.0
-uvicorn_loguru_integration==0.3.0
+apscheduler==3.10.4
+dateparser==1.2.0
+fastapi==0.110.0
+loguru==0.7.2
+python-dotenv==1.0.1
+uvicorn==0.27.1
+uvicorn-loguru-integration==0.3.1
 python-digitalocean==1.17.0
-boto3==1.25.4
-urllib3==1.26.12
-aiofiles==22.1.0
-botocore~=1.28.4
+boto3==1.34.69
+urllib3==2.2.1
+aiofiles==23.2.1
+botocore==1.34.69
 hcloud==2.3.0
-google-api-python-client==2.65.0
+google-api-python-client==2.122.0
+anyio==3.7.1
+starlette==0.36.3
+pytest==8.0.2
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+httpx==0.27.0
