Update GitHub Actions workflow with proper environment variable quoting

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
           echo "Latest tag: $latest_tag"
-          echo "LATEST_TAG=$latest_tag" >> $GITHUB_ENV
+          echo "LATEST_TAG=$latest_tag" >> "$GITHUB_ENV"
 
       - name: Bump version
         id: bump_version
@@ -49,7 +49,7 @@ jobs:
           latest_version=${LATEST_TAG#v}
           IFS='.' read -r major minor patch <<< "$latest_version"
           new_version="v$major.$minor.$((patch + 1))"
-          echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
+          echo "NEW_VERSION=$new_version" >> "$GITHUB_ENV"
           echo "New version will be: $new_version"
 
       - name: Create Release
