--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,7 @@ pytest==8.0.2
 pytest-cov==4.1.0
 pytest-mock==3.12.0
 httpx==0.27.0
+azure-identity==1.15.0
+azure-mgmt-compute==30.3.0
+azure-mgmt-network==25.1.0
+azure-mgmt-resource==23.0.1
