--- a/.github/workflows/dev-workflow.yml
+++ b/.github/workflows/dev-workflow.yml
@@ -15,7 +15,8 @@ on:
       - 'docs/**'
 
 jobs:
-  test:
+  test-suite:
+    name: Run Test Suite
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -32,7 +33,8 @@ jobs:
           pip install pytest pytest-mock pytest-cov
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Test with pytest
+      - name: Run pytest
+        id: pytest
         run: |
           pytest
 
@@ -46,7 +48,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
   
   build-test-image:
-    needs: test
+    needs: test-suite
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
