Add Scaleway provider support and update documentation
- Introduced Scaleway as a new cloud provider with complete integration for instance management including creation, deletion, starting, and stopping instances.
- Updated configuration settings in `settings.py` to include Scaleway-specific parameters.
- Added new functions in `functions.py` for Scaleway instance operations and lifecycle management.
- Enhanced README.md and created new documentation for Scaleway setup and configuration.
- Updated .gitignore to include Scaleway rules directory for private development guidelines.

--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ pnpm-debug.log*
 *.sln
 *.sw?
 .cursor-project-context
+
+# Cursor rules directory - contains private development guidelines
+.cursor/
