Implement PyPI publishing steps in main workflow and remove legacy publish-pypi.yml
- Add steps to update version in pyproject.toml, install dependencies, and publish to PyPI using the new workflow.
- Remove the outdated publish-pypi.yml file to streamline the CI/CD process.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,3 +99,26 @@ jobs:
           tags: |
             laffin/cloudproxy:latest
             laffin/cloudproxy:${{ env.NEW_VERSION }}
+
+      # PyPI Publishing Steps
+      - name: Update version in pyproject.toml
+        run: |
+          # Strip the 'v' prefix from the version
+          VERSION=${NEW_VERSION#v}
+          # Use sed to update the version in pyproject.toml to match the release
+          sed -i "s/version = \"[0-9]*\.[0-9]*\.[0-9]*\"/version = \"$VERSION\"/" pyproject.toml
+          cat pyproject.toml | grep version
+
+      - name: Install PyPI publishing dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+
+      - name: Build and publish to PyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          python -m build
+          twine check dist/*
+          twine upload dist/*
