--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CloudProxy CI/CD Pipeline
 
 on:
   push:
@@ -9,34 +9,43 @@ on:
       - 'docs/**'
 
 jobs:
-  test-and-release:
+  test:
+    name: 🧪 Test Suite
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
-    
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Set up Python 3.11
+      - name: 🐍 Set up Python 3.11
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: 📚 Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-mock
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Test with pytest
+      - name: 🧪 Run pytest
         run: |
           pytest
 
-      - name: Get latest tag
+  prepare-release:
+    name: 🏷️ Prepare Release
+    needs: test
+    runs-on: ubuntu-latest
+    outputs:
+      new_version: ${{ steps.set_outputs.outputs.new_version }}
+    permissions:
+      contents: write
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: 🔍 Get latest tag
         id: get_latest_tag
         run: |
           git fetch --tags
@@ -44,7 +53,7 @@ jobs:
           echo "Latest tag: $latest_tag"
           echo "LATEST_TAG=$latest_tag" >> "$GITHUB_ENV"
 
-      - name: Bump version
+      - name: 🔢 Calculate new version
         id: bump_version
         run: |
           latest_version=${LATEST_TAG#v}
@@ -53,7 +62,7 @@ jobs:
           echo "NEW_VERSION=$new_version" >> "$GITHUB_ENV"
           echo "New version will be: $new_version"
 
-      - name: Check if tag exists
+      - name: ✅ Verify version uniqueness
         id: check_tag
         run: |
           if git tag -l | grep -q "^${{ env.NEW_VERSION }}$"; then
@@ -65,8 +74,13 @@ jobs:
             echo "Using incremented version: $new_version"
             echo "NEW_VERSION=$new_version" >> "$GITHUB_ENV"
           fi
+      
+      - name: 📤 Export version for other jobs
+        id: set_outputs
+        run: |
+          echo "new_version=${{ env.NEW_VERSION }}" >> $GITHUB_OUTPUT
 
-      - name: Create Release
+      - name: 🚀 Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -82,39 +96,62 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Set up Docker Buildx
+  publish-docker:
+    name: 🐳 Publish Docker Image
+    needs: prepare-release
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 🏗️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: 🔑 Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: 🚢 Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
             laffin/cloudproxy:latest
-            laffin/cloudproxy:${{ env.NEW_VERSION }}
+            laffin/cloudproxy:${{ needs.prepare-release.outputs.new_version }}
 
-      # PyPI Publishing Steps
-      - name: Update version in pyproject.toml
+  publish-pypi:
+    name: 📦 Publish PyPI Package
+    needs: prepare-release
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: 📝 Update version in pyproject.toml
         run: |
           # Strip the 'v' prefix from the version
-          VERSION=${NEW_VERSION#v}
+          VERSION=${{ needs.prepare-release.outputs.new_version }}
+          VERSION=${VERSION#v}
           # Use sed to update the version in pyproject.toml to match the release
           sed -i "s/version = \"[0-9]*\.[0-9]*\.[0-9]*\"/version = \"$VERSION\"/" pyproject.toml
           cat pyproject.toml | grep version
 
-      - name: Install PyPI publishing dependencies
+      - name: 📚 Install PyPI publishing dependencies
         run: |
           python -m pip install --upgrade pip
           pip install build twine
 
-      - name: Build and publish to PyPI
+      - name: 📤 Build and publish to PyPI
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
