Update pytest coverage reporting format in GitHub Actions workflow
- Change coverage report format from Cobertura to XML for better compatibility with reporting tools.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: 🧪 Run pytest
         run: |
-          pytest --cov=. --cov-report=cobertura
+          pytest --cov=. --cov-report=xml
 
       - name: Set up Codacy Project Token
         run: echo "CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }}" >> $GITHUB_ENV
