Updated .env.example with new vars

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,18 @@ PROXY_PASSWORD=changeme
 # AGE_LIMIT=0
 
 # ====================
+# Rolling Deployment Settings
+# ====================
+# Optional: Enable rolling deployments for zero-downtime proxy recycling
+# ROLLING_DEPLOYMENT=False
+
+# Optional: Minimum number of proxies to keep available during recycling
+# ROLLING_MIN_AVAILABLE=3
+
+# Optional: Maximum number of proxies to recycle simultaneously
+# ROLLING_BATCH_SIZE=2
+
+# ====================
 # DigitalOcean Provider
 # ====================
 # Enable provider
