--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,6 +110,9 @@ jobs:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
 
+      - name: 🛠️ Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: 🏗️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -123,7 +126,10 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           tags: |
             laffin/cloudproxy:latest
             laffin/cloudproxy:${{ needs.prepare-release.outputs.new_version }}
