--- a/cloudproxy-ui/package.json
+++ b/cloudproxy-ui/package.json
@@ -29,6 +29,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
@@ -40,7 +41,8 @@
     "eslint-plugin-vue": "^9.22.0",
     "happy-dom": "^18.0.1",
     "msw": "^2.10.5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "wait-on": "^8.0.4"
   },
   "eslintConfig": {
     "root": true,
