--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,15 +100,27 @@ jobs:
           draft: false
           prerelease: false
 
-  publish-docker:
-    name: 🐳 Publish Docker Image
+  build-docker:
+    name: 🐳 Build Docker Image
     needs: prepare-release
     runs-on: ubuntu-latest
     permissions:
       packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
+          - linux/arm/v7
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
+
+      - name: 🔧 Prepare platform name
+        run: |
+          platform=${{ matrix.platform }}
+          echo "PLATFORM_PAIR=${platform////-}" >> $GITHUB_ENV
 
       - name: 🛠️ Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -122,17 +134,66 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 🚢 Build and push Docker image
+      - name: 🚢 Build and push by digest
+        id: build
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: |
-            laffin/cloudproxy:latest
-            laffin/cloudproxy:${{ needs.prepare-release.outputs.new_version }}
+          platforms: ${{ matrix.platform }}
+          labels: |
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.version=${{ needs.prepare-release.outputs.new_version }}
+          outputs: type=image,name=laffin/cloudproxy,push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=buildkit-${{ env.PLATFORM_PAIR }}
+          cache-to: type=gha,mode=max,scope=buildkit-${{ env.PLATFORM_PAIR }}
+
+      - name: 📤 Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+
+      - name: 📦 Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  publish-docker:
+    name: 🚀 Create and Push Docker Manifest
+    needs: [prepare-release, build-docker]
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    steps:
+      - name: 📥 Download digests
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
+
+      - name: 🏗️ Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: 🔑 Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: 🏷️ Create manifest list and push
+        working-directory: /tmp/digests
+        run: |
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< '{"tags":["laffin/cloudproxy:latest","laffin/cloudproxy:${{ needs.prepare-release.outputs.new_version }}"]}') \
+            $(printf 'laffin/cloudproxy@sha256:%s ' *)
+
+      - name: 🔍 Inspect image
+        run: |
+          docker buildx imagetools inspect laffin/cloudproxy:latest
+          docker buildx imagetools inspect laffin/cloudproxy:${{ needs.prepare-release.outputs.new_version }}
 
   publish-pypi:
     name: 📦 Publish PyPI Package
