fix: add Testing summary job for branch protection compliance
Added a lightweight summary job that depends on both backend and frontend
tests to provide the required 'Testing' status check for branch protection
rules while maintaining the detailed split test jobs.

--- a/.github/workflows/python-app-testing.yml
+++ b/.github/workflows/python-app-testing.yml
@@ -95,3 +95,11 @@ jobs:
         flags: frontend
         name: frontend-coverage
         fail_ci_if_error: false
+
+  testing:
+    name: Testing
+    needs: [backend-test, frontend-test]
+    runs-on: ubuntu-latest
+    steps:
+    - name: ✅ All tests passed
+      run: echo "All tests completed successfully"
