fix: resolve Hetzner ubuntu-20.04 deprecation and upgrade DigitalOcean to ubuntu-22.04
- Add configurable image support for Hetzner provider (HETZNER_IMAGE)
- Default Hetzner images to ubuntu-22.04 (was hardcoded ubuntu-20.04)
- Add configurable image support for DigitalOcean provider (DIGITALOCEAN_IMAGE)
- Default DigitalOcean images to ubuntu-22-04-x64 (was hardcoded ubuntu-20-04-x64)
- Update .env.example with new image configuration options
- Add notes that user data script is tested with Ubuntu images only
- Update test fixtures to include image parameters
- Maintain backward compatibility through sensible defaults

Fixes issue #102 where Hetzner's ubuntu-20.04 image is deprecated and
"impossible to create new instances".

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ DIGITALOCEAN_ACCESS_TOKEN=your_digitalocean_token_here
 
 # Optional settings
 # DIGITALOCEAN_REGION=lon1
+# DIGITALOCEAN_IMAGE=ubuntu-22-04-x64  # User data script tested with Ubuntu images only
 # DIGITALOCEAN_MIN_SCALING=2
 # DIGITALOCEAN_MAX_SCALING=2
 # DIGITALOCEAN_SIZE=s-1vcpu-1gb
@@ -116,6 +117,7 @@ HETZNER_ACCESS_TOKEN=your_hetzner_token_here
 
 # Optional settings
 # HETZNER_LOCATION=nbg1
+# HETZNER_IMAGE=ubuntu-22.04  # User data script tested with Ubuntu images only
 # HETZNER_MIN_SCALING=2
 # HETZNER_MAX_SCALING=2
 # HETZNER_SIZE=cx21
